# tean

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux.yml  macos.yml  windows.yml
include/tean/: accumulation_distribution_line.hpp  accumulation_distribution_oscillator.hpp  average_true_range.hpp  bollinger_bands.hpp  ease_of_movement.hpp  exponential_moving_average.hpp  linear_regression.hpp  maximum_in_period.hpp  minimum_in_period.hpp  relative_strength_index.hpp  simple_moving_average.hpp  standard_deviation.hpp  sum_over_period.hpp  true_range.hpp  variance.hpp  williams_percent_range.hpp  z_score.hpp
src/: accumulation_distribution_line.cpp  accumulation_distribution_oscillator.cpp  average_true_range.cpp  ease_of_movement.cpp  exponential_moving_average.cpp  linear_regression.cpp  maximum_in_period.cpp  minimum_in_period.cpp  relative_strength_index.cpp  simple_moving_average.cpp  standard_deviation.cpp  sum_over_period.cpp  true_range.cpp  variance.cpp  williams_percent_range.cpp
tests/: CMakeLists.txt  accumulation_distribution_line.tests.cpp  accumulation_distribution_oscillator.tests.cpp  average_true_range.tests.cpp  bollinger_bands.tests.cpp  decimal.tests.hpp  ease_of_movement.tests.cpp  exponential_moving_average.tests.cpp  linear_regression.tests.cpp  maximum_in_period.tests.cpp  minimum_in_period.tests.cpp  relative_strength_index.tests.cpp  simple_moving_average.tests.cpp  standard_deviation.tests.cpp  sum_over_period.tests.cpp  tean.tests.hpp  true_range.tests.cpp  variance.tests.cpp  williams_percent_range.tests.cpp  z_score.tests.cpp
